{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "UI",
            "id": "356afa9b-42f1-47cd-a20a-e98bc2f96ecd",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "b4a7b208-ed50-41db-8c40-86f5e080273c",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "PassThrough",
                    "id": "5e2bd650-324f-493f-b055-21940705ff7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "PassThrough",
                    "id": "09e3aa44-f198-4e99-a923-e5859b7cdc4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Join",
                    "type": "PassThrough",
                    "id": "7af7be8f-aa3c-47a0-9165-01a1d2af3696",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06a6df35-19a2-4073-8954-b933a883f755",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "D-Pad",
                    "id": "f28199f4-4118-4e69-9894-fddb278521b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d29c85b9-c502-4984-abab-0352f373cc24",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7e154274-b908-4a12-90b4-fc89eb030c86",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "26bd724d-9c44-434c-ae36-a45e814cdfbe",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7c28f24a-8fab-4bc7-8960-8976577a9205",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a7c619de-4bd4-4df6-afd4-706e09f3b781",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "123afee2-0689-4987-830b-08245397d086",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c833103-3706-446f-aa83-e1d41d78ad3b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGame",
            "id": "712ad577-7f61-46d4-b10f-cbdc6340fb7d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "85c4cdfb-e3db-4ba3-a362-853872ec9e5c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Turning",
                    "type": "Value",
                    "id": "6a9e950d-aa65-42f9-9d26-69c5a2d4e5e1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MainWeapon",
                    "type": "Button",
                    "id": "1fca7bee-4b17-416b-9076-db905a526f6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AltWeapon",
                    "type": "Button",
                    "id": "2ba9b35e-a6bb-4b0d-9bbc-5eaa4c9e389b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Utility",
                    "type": "Button",
                    "id": "94664fb8-b1f5-4d95-ad7e-f966098bc4dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "922a18b8-6e52-4da3-ab91-8fefbdff33e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "223fe61f-d37f-4fd7-984c-4715a77d4a2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "12b7c6ce-2d30-4efc-8b4c-8b3d9f9ccf3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa13e77c-ef56-43f6-8390-faf492c9c260",
                    "path": "<Gamepad>/dpad",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17a82cac-9b1c-4e4a-b5d9-e4e6ec5bed03",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85819369-36c7-494a-85c9-861d24e2fdeb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "MainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae932635-6b9f-4bd3-a964-d2456494e8b3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "MainWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3bf076f5-502e-4214-9a01-9ee1b4efacf0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "AltWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebde2880-4b4e-4305-ba4b-48cc8e27bbc5",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "AltWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a730a760-e53c-4279-85ff-7737ebc465d5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Utility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30918acf-edf1-489e-9cac-d7fb61e3fcaf",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e123117-3dbf-4b57-96bc-a77bfe7ce9ea",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "725f107f-b9b9-40b8-94f3-10ee7bbac0d6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Turning",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff897461-8bfb-4ab4-8209-9d9a620e9c35",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PlayerControls",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControls",
            "bindingGroup": "PlayerControls",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}